[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/UI/Game/BarsHealth.png" type="Texture" id=1]
[ext_resource path="res://Assets/UI/Game/CharacterIcon.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Game/BarsExp.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Game/BarsCase.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Game/BarsMana.png" type="Texture" id=5]
[ext_resource path="res://Scripts/UI/UIController.gd" type="Script" id=6]
[ext_resource path="res://Assets/UI/Game/DangerSign.png" type="Texture" id=7]

[node name="UserInterface" type="CanvasLayer"]
layer = 2

[node name="UI" type="Control" parent="."]
margin_right = 640.0
margin_bottom = 360.0
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterIcon" type="Sprite" parent="UI"]
position = Vector2( 25, 25 )
texture = ExtResource( 2 )

[node name="Bars" type="Sprite" parent="UI"]
position = Vector2( 59, 28 )
texture = ExtResource( 4 )

[node name="HealthBar" type="TextureProgress" parent="UI/Bars"]
margin_left = -18.0
margin_top = -5.0
margin_right = 19.0
margin_bottom = -3.0
value = 100.0
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaBar" type="TextureProgress" parent="UI/Bars"]
margin_left = -18.0
margin_top = -2.0
margin_right = 16.0
value = 100.0
texture_progress = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExpBar" type="TextureProgress" parent="UI/Bars"]
margin_left = -19.0
margin_top = 5.0
margin_right = 14.0
margin_bottom = 6.0
value = 100.0
texture_progress = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DangerSign" type="Sprite" parent="UI"]
modulate = Color( 1, 1, 1, 0.235294 )
position = Vector2( 400, 25 )
texture = ExtResource( 7 )
